// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TasksSubList renders correctly Done section 1`] = `
<ListItem
  dense={true}
  disableGutters={true}
>
  <List
    className="makeStyles-fullWidth-1"
    dense={true}
    subheader={
      <ListSubheader
        disableSticky={true}
      >
        <strong>
          Done
           (
          1
          )
        </strong>
      </ListSubheader>
    }
  >
    <ListItem
      disableGutters={true}
    >
      <a
        className="makeStyles-fullWidth-1"
        href="//1"
        onClick={[Function]}
      >
        <TaskListItem
          id="1"
          status="UNCOMPLETED"
          title="Call you head manager"
        />
      </a>
    </ListItem>
  </List>
</ListItem>
`;

exports[`Component - TasksSubList renders correctly Todo section 1`] = `
<ListItem
  dense={true}
  disableGutters={true}
>
  <List
    className="makeStyles-fullWidth-1"
    dense={true}
    subheader={
      <ListSubheader
        disableSticky={true}
      >
        <strong>
          Todo
           (
          1
          )
        </strong>
      </ListSubheader>
    }
  >
    <ListItem
      disableGutters={true}
    >
      <a
        className="makeStyles-fullWidth-1"
        href="//2"
        onClick={[Function]}
      >
        <TaskListItem
          id="2"
          status="COMPLETED"
          title="Write you main manager"
        />
      </a>
    </ListItem>
  </List>
</ListItem>
`;

exports[`Component - TasksSubList renders correctly without tasks and count 1`] = `
<ListItem
  dense={true}
  disableGutters={true}
>
  <List
    className="makeStyles-fullWidth-1"
    dense={true}
    subheader={
      <ListSubheader
        disableSticky={true}
      >
        <strong>
          Todo
           (
          0
          )
        </strong>
      </ListSubheader>
    }
  />
</ListItem>
`;
